	1308 Golden Axe:		NEED INFO.
	13160, 13161 Destroyer:	Can break target's armor when fired at close range.
	-----
	4296 Cramp Card:	Temp Plug: 10z per mob-level on a 3% chance.
	7458 Fortune Horn:	It's a custom name ^^;
	12017 Speed Decreasing Potion: A potion which decreases the moving speed of a character for a duration.
	-----

========================
04/13
	* Thanatos, Kiel and Randgris now use Ganbantein [Playtester]
	* Added Magmaring mob [Playtester]
04/12
	* Ganbantein now has a range equal to the level used [Playtester]
	- only mobs use levels higher than 1
04/11
	* Added dummy information to the pet_db.txt for the Rice Cake and Xmas
	  Goblin pets. [Skotlex]
04/10
	* Fixed aspd value of Fuuma Shuriken [Playtester]
04/08
	* Added some accessories thanks to Argatlahm [Playtester]
	- also added Valkyrie combo bonus
04/07
	* Corrected amatsu dungeon's nomemo mapflags not working
	* Added a missing map entry, 've_in02' to map list and index
	* Fixed Galion's mob skills (remnants of copy-paste) [ultramage]
	* Updated map index and map cache with Nameless Island maps [DracoRPG]
	- also removed the duplicate g_room2 entry from map index, read the note
	* Corrected Aliza card's item_db line. [Skotlex]
04/05
	* Fixed some items that should heal percentual hp/sp [Playtester]
04/04
	* Corrected Marionette Control's SP cost, it should be 100. [Skotlex]
	* Updated Poison Bottle and Thunder Box [Playtester]
	* Had to revert some mob modes [Playtester]
	- figured out I can't read the mode fully from the inc value
	- now mob mode is based on Doddler's info
	- updated sql files
04/03
	* Tried to fixup some 11.1 mob modes [Playtester]
	- a converter would be nice, anyone?
	* Raised skill usage and mode of 11.1 MVPs [Playtester]
04/02
	* Added EggBoy and EggGirl scripts [Playtester]
	- also small fixes to Aspd and Speed bonus
03/31
	* Added names to Item Group items thanks to Leon [Playtester]
	* Updated and fixed Item Groups and Doom Slayer [Playtester]